--- a/App/Views/Account/Login.cshtml
+++ b/App/Views/Account/Login.cshtml
@@ -1,33 +1,7 @@
 ﻿<head>
     <title>登录</title>
     <script data-main="../Scripts/Lib/Login.js" src="~/Scripts/require.js"></script>
-    <style>
-        html {
-            font-size: 12px;
-        }
-
-        li {
-            line-height: 28px;
-        }
-
-        span {
-            width: 200px;
-            display: inline-block;
-        }
-
-        label {
-            display: inline;
-        }
-
-        input.error {
-            border: solid 1px red;
-        }
-
-        label.error {
-            color: red;
-            margin-left: 5px;
-        }
-    </style>
+    <link href="~/Content/Basic.css" rel="stylesheet" />
 </head>
 <form>
     <div>
