using ko in login

--- a/App/Views/Account/List.cshtml
+++ b/App/Views/Account/List.cshtml
@@ -20,6 +20,7 @@
         </li>
     </ul>
     <input type="submit" id="btnSearch" value="查询" />
+    @Html.ActionLink("添加","Add","Account")
 
     <ul>
         @foreach (var user in Model.Items)
