--- a/App/Views/Account/Login.cshtml
+++ b/App/Views/Account/Login.cshtml
@@ -1,23 +1,31 @@
-﻿<head>
+﻿
+<!doctype html>
+<html>
+<head>
     <title>登录</title>
     <script data-main="../Scripts/Lib/Login.js" src="~/Scripts/require.js"></script>
     <link href="~/Content/Basic.css" rel="stylesheet" />
 </head>
-<form>
-    <div>
-        <span>用户名：</span>
-        <input id="loginName" name="loginName" type="text" />
-    </div>
-    <div>
-        <span>密码：</span>
-        <input id="pwd" name="pwd" type="password" />
-    </div>
-    <div>
-        <span>密码：</span>
-        <img src="@Url.Action("CreateCheckCode")" onclick="this.src = '@Url.Action("CreateCheckCode")'+'?f='+ Math.random()" title="单击更换" />
-        <input id="checkCode" name="checkCode" type="text" value="1234" />
-    </div>
-    <div>
-        <input id="submit" type="button" value="登录" />
-    </div>
-</form>
+<body>
+    <form>
+        <div data-bind="text: message"></div>
+        <div>
+            <span>用户名：</span>
+            <input id="loginName" name="loginName" data-bind="value: loginName" type="text" />
+        </div>
+        <div>
+            <span>密码：</span>
+            <input id="pwd" name="pwd" type="password" data-bind="value: pwd" />
+        </div>
+        <div>
+            <span>验证码：</span>
+            <img src="@Url.Action("CreateCheckCode")" onclick="this.src = '@Url.Action("CreateCheckCode")'+'?f='+ Math.random()" title="单击更换" />
+            <input id="checkCode" name="checkCode" type="text" data-bind="value: checkCode" />
+        </div>
+        <div>
+            <input id="submit" type="button" value="登录" data-bind="click: loginClick" />
+        </div>
+    </form>
+</body>
+
+</html>
